--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@unocss/preset-wind4": "^66.3.3",
     "typescript": "^5.8.3",
     "unocss": "^66.3.3",
-    "wxt": "^0.20.6"
+    "wxt": "^0.20.6",
+    "@radum/eslint-config": "^10.0.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-format": "^1.0.1",
+    "@unocss/eslint-plugin": "^66.0.0"
   },
   "dependencies": {
     "@webext-core/messaging": "^2.3.0",
