Getting ready the first version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "wxt-starter",
-  "description": "manifest.json description",
-  "private": true,
-  "version": "0.0.0",
+  "name": "DOMCompare",
   "type": "module",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Compares the rendered DOM of a webpage with the original server-side DOM to highlight differences and detect client-side changes.",
   "scripts": {
     "dev": "wxt",
     "dev:firefox": "wxt -b firefox",
@@ -14,21 +14,22 @@
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare"
   },
-  "devDependencies": {
-    "@unocss/postcss": "^66.3.3",
-    "@unocss/preset-wind4": "^66.3.3",
-    "typescript": "^5.8.3",
-    "unocss": "^66.3.3",
-    "wxt": "^0.20.6",
-    "@radum/eslint-config": "^10.0.0",
-    "eslint": "^9.24.0",
-    "eslint-plugin-format": "^1.0.1",
-    "@unocss/eslint-plugin": "^66.0.0"
-  },
   "dependencies": {
     "@webext-core/messaging": "^2.3.0",
     "@wxt-dev/storage": "^1.1.1",
     "diff": "^8.0.2",
     "diff2html": "^3.4.52"
+  },
+  "devDependencies": {
+    "@radum/eslint-config": "^10.1.0",
+    "@unocss/eslint-plugin": "^66.3.3",
+    "@unocss/postcss": "^66.3.3",
+    "@unocss/preset-wind4": "^66.3.3",
+    "@wxt-dev/auto-icons": "^1.0.2",
+    "eslint": "^9.31.0",
+    "eslint-plugin-format": "^1.0.1",
+    "typescript": "^5.8.3",
+    "unocss": "^66.3.3",
+    "wxt": "^0.20.7"
   }
 }
